[fix] video alignment & remove white line

--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -1,5 +1,6 @@
 .header {
   position: fixed;
+  height: 80px;
   top: 0;
   left: 0;
   right: 0;
